<resources>
    <string name="app_name">Note Scope</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="author_info">Developed by Sergey Zarubin from RIBO-04-24.</string>
    <string name="blank_inputs">Input all fields at first!</string>
    <string name="transfer">Go next →</string>
    <string name="live">Live</string>
    <string name="history">History</string>
    <string name="settings">Settings\n</string>
    <string name="musical_note">Musical note</string>
    <string name="peak_frequency">Peak frequency</string>
    <string name="variant">Вариант %d</string>
    <string name="clear">Clear</string>
    <string name="copied">Copied</string>
    <string name="share_to">Share to</string>
    <string name="no_situable_apps">There is no suitable application</string>
    <string name="spectral_analysis_settings">Spectral Analysis Settings</string>
    <string name="processing">Processing</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="fft_size">FFT Size</string>
    <string name="apply">Apply</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="realtime_metrics">Realtime Metrics</string>
    <string name="window_function">Window Function</string>
    <string name="history_buffer">History Buffer</string>
    <string name="spectrogram_length">Spectrogram length</string>
    <string name="visualization">Visualization</string>
    <string name="overlap">Overlap</string>
    <string name="fft_power_of_two_warning">⚠ Non power-of-two FFT may reduce performance</string>
    <string name="custom_fft_size">Custom FFT Size</string>
    <string name="allow_custom_fft_size">Allow custom FFT size</string>
    <string name="min_fft_size">128</string>
    <string name="mid_fft_size">1024</string>
    <string name="max_fft_size">8192</string>
    <string name="min_spectrogram_duration">1s</string>
    <string name="mid_spectrogram_duration">15s</string>
    <string name="max_spectrogram_duration">30s</string>
    <string name="unknown_host_exception">No internet connection.</string>
    <string name="socket_timeout_exception">Timeout.</string>
    <string name="api_exception">Invalid Username or Password.</string>
    <string name="unknown_network_exception">Network error. See the Logcat for more info.</string>
</resources>